<resources>
    <string name="app_name" translatable="false">REMEMBER</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register_now">Register Now</string>
    <string name="select_language">Select Language</string>
    <string name="view_all_quotes">View all quotes</string>
    <string name="create_quote">"Created quotes will appear here.\n Start creating your own quotes"</string>
    <string name="main_screen_quote">“Love has no age, no limit,\n and no death”</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="login_sucess">Login Successful</string>
    <string name="create_profile">Create Profile</string>
    <string name="register_sucess">Registration Successful</string>
    <string name="confirm_pass_toast">Confirm Password do not matches with Password. Please Check Your Password</string>
    <string name="verify_email_id">Verify Email ID</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="relationship">Relationship</string>
    <string name="birth_date">Birth Date</string>
    <string name="date_of_death">Date of Death</string>
    <string name="last_place_of_residence">Last Place of Residence</string>
    <string name="my_final_words">My Final Words</string>
    <string name="what_i_want_to_share_with_you">My Best Moments</string>
    <string name="what_i_guessed">What is important to me in life</string>
    <string name="quotations">Quotes</string>
    <string name="home">Home</string>
    <string name="documents">Documents</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hallo">👋🏽 Hello</string>
    <string name="fisher">Fisher</string>
    <string name="search_people">Search People</string>
    <string name="ideas">Ideas</string>
    <string name="burial">Burial</string>
    <string name="motivation">Motivation</string>
    <string name="links">Links</string>
    <string name="first_name_xd">First Name</string>
    <string name="last_name_xd">Last Name</string>
    <string name="wife_husband_name">Wife/Husband Name</string>
    <string name="upload_profile_picture_toast">Please Upload Your Profile Picture</string>
    <string name="full_name_toast">Please Enter Your Full Name</string>
    <string name="profile_image_change_error">Profile Image change error</string>
    <string name="profile_created_successfuly">Profile Created Successfully</string>
    <string name="error_occured_pic_upload">Some Error Occurred While Uploading Profile Image. Please Try Again</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="grant_read_permission">Please Grant Permission to Read Storage</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search_result">Search Result</string>
    <string name="friends">Friends</string>
    <string name="acquaintance">Acquaintance</string>
    <string name="exchange">Exchange</string>
    <string name="document">Document</string>
    <string name="pictures">Pictures</string>
    <string name="videos">Videos</string>
    <string name="recent_search">Recent Result</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="follow">Follow</string>
    <string name="create_member_plus_acoount">Create Member PLUS Account</string>
    <string name="update_profile">Update Profile</string>
    <string name="email_address_or_password_is_missing">Email address or password is missing</string>
    <string name="error">Error</string>
    <string name="view_all">View All</string>
    <string name="member_plus">Member PLUS</string>
    <string name="quote">Quotes</string>
    <string name="search_people_here">Search people here</string>
    <string name="upload_your_first_video_by_clicking">Upload your first Video by\nclicking </string>
    <string name="upload_your_first_picture_by_clicking">Upload your first Picture by\nclicking </string>
    <string name="upload_your_first_exchange_by_clicking">Upload your Exchange File by\nclicking </string>
    <string name="save_your_first_document_by_clicking">Save your first document by\nclicking </string>
    <string name="create_your_first_own_quotes_by_clicking">Create your first own Quotes by\nclicking </string>
    <string name="button"> Button </string>
    <string name="update_member_plus_profile">Update Member Plus Profile</string>
    <string name="create_member_plus_profile">Create Member Plus Profile</string>
    <string name="requested">Requested</string>
    <string name="notification">Notification</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="requested_to_follow_you">requested to Follow You</string>
    <string name="member_plus_new">Switch Account</string>
    <string name="member_profile_created_successfully">Member Profile Created Successfully</string>
    <string name="member_profile_update_successfully">Member Profile Updated Successfully</string>
    <string name="request_sent">Request Sent</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit"><u>Edit</u></string>
    <string name="successfully_deleted">Successfully Deleted</string>
    <string name="add_video">Add Video</string>
    <string name="add_image_title">Add Image Title</string>
    <string name="edit_image">Edit Image</string>
    <string name="edit_quote">Edit Quote</string>
    <string name="add_caption">Add Caption</string>
    <string name="add_document_title">Add Document Title</string>
    <string name="edit_document">Edit Document</string>
    <string name="edit_video">Edit Video</string>
    <string name="add_video_title">Add Video Title</string>
    <string name="upload_quote">Upload Quote</string>
    <string name="add_quote">Add Quote</string>
    <string name="upload_video">Upload Video</string>
    <string name="upload_document">Upload Document</string>
    <string name="upload_image">Upload Image</string>
    <string name="add_image">Add Image</string>
    <string name="add_document">Add Document</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="member_plus_caps">Member PLUS</string>
    <string name="sent">SENT</string>
    <string name="received">RECEIVED</string>
    <string name="remove_follower">Remove Follower</string>
    <string name="do_you_want_to_remove_this_user">Do you want to remove this user?</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="yes">Yes</string>
    <string name="unfollow">Unfollow</string>
    <string name="do_you_want_to_unfollow_this_user">Do you want to unfollow this user?</string>
    <string name="uploaded">Uploaded</string>
    <string name="do_you_want_to_delete">"Do you want to delete "</string>
    <string name="file_is_getting_uploaded_please_wait">File Is Getting Uploaded Please Wait</string>
    <string name="upload_first">Upload First</string>
    <string name="enter_caption">Enter Caption</string>
    <string name="something_went_wrong_while_loading_followers_details">Something Went wrong while loading followers details</string>
    <string name="started_following_you">started following you.</string>
    <string name="there_are_no_notifications">There are no notifications</string>
    <string name="no_exchange_is_received">No Exchange is Received</string>
    <string name="no_exchange_is_sent">No Exchange is Sent</string>
    <string name="please_wait_while_video_is_getting_uploaded">Please wait while Video Is Getting Uploaded</string>
    <string name="saved">Saved</string>
    <string name="documents_are_not_yet_uploaded">Documents are not yet uploaded</string>
    <string name="pictures_are_not_uploaded_yet">Pictures are not uploaded yet</string>
    <string name="videos_are_not_uploaded_yet">Videos are not uploaded yet</string>
    <string name="with_you">" With You"</string>
    <string name="shared_a">"Shared A "</string>
    <string name="with">"With"</string>
    <string name="you_shared_a">"You Shared A "</string>
    <string name="full_name">Full Name</string>
    <string name="please_add_caption">Please Add Caption</string>
    <string name="please_add_title">Please Add Title</string>
    <string name="please_upload_image">Please Upload Image</string>
    <string name="burial_1">Procedure funeral</string>
    <string name="burial_2">lyrics, songs</string>
    <string name="burial_3">Obituary</string>
    <string name="burial_4">Information</string>
    <string name="burial_5">Burial (type/grave)</string>
    <string name="motiv_1">Other cultures</string>
    <string name="motiv_2">Life hacks</string>
    <string name="motiv_3">Goal</string>
    <string name="motiv_4">Sayings</string>
    <string name="motiv_5">Stories</string>
    <string name="links_1">Funeral directors</string>
    <string name="links_2">Lawyers</string>
    <string name="links_3">Notaries</string>
    <string name="links_4">Support Heart</string>
    <string name="links_5">Condolence cards</string>
    <string name="links_6">First aid</string>
    <string name="ideas_1">Ideas</string>
    <string name="ideas_2">Account Details</string>
    <string name="ideas_3">Payment Function</string>
    <string name="ideas_4">Improvements</string>
    <string name="ideas_5">Imprint</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_title">Enter Title</string>
    <string name="only_friends_can_see_the_data_which_is_locked">Only Friends Can See The Data Which is Locked</string>
    <string name="app_version_1_0v">App Version - 1.0v</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="settings">Settings</string>
    <string name="love_has_no_age_no_limit_and_no_death">Love has no age, no limit, and no death</string>
    <string name="colors_are_the_smiles_of_nature">Colors are the smiles of nature</string>
    <string name="being_happy_never_goes_out_of_style">Being happy never goes out of style</string>
    <string name="i_cannot_escape_death_but_at_least_i_can_escape_the_fear_of_it">I cannot escape death, but at least I can escape the fear of it.</string>
    <string name="to_love_oneself_is_the_beginning_of_a_lifelong_romance">To love oneself is the beginning of a lifelong romance</string>
    <string name="find_out_who_you_are_and_do_it_on_purpose">Find out who you are and do it on purpose</string>
    <string name="do_not_judge_me_by_my_success_judge_me_by_how_many_times_i_fell_down_and_got_back_up_again">Do not judge me by my success, judge me by how many times I fell down and got back up again</string>
    <string name="it_is_not_death_that_a_man_should_fear_but_rather_he_should_fear_never_beginning_to_live">It is not death that a man should fear, but rather he should fear never beginning to live.</string>
    <string name="for_every_minute_you_are_angry_you_lose_sixty_seconds_of_happiness">For every minute you are angry you lose sixty seconds of happiness</string>
    <string name="the_biggest_adventure_you_can_ever_take_is_to_live_the_life_of_your_dreams">The biggest adventure you can ever take is to live the life of your dreams</string>
    <string name="share_using">Share Using</string>
</resources>