<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grey_bg_color"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dp_24"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_12"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        android:text="@string/select_language"/>


    <RadioGroup
        android:layout_marginTop="@dimen/dp_16"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/brown_rounded_border"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <RadioButton
            android:padding="@dimen/dp_8"
            android:layout_width="wrap_content"
            android:text="@string/english"
            android:enabled="true"
            android:background="@drawable/language_selector"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:padding="@dimen/dp_8"
            android:layout_width="wrap_content"
            android:text="@string/german"
            android:background="@drawable/language_selector"
            android:layout_height="wrap_content"/>
    </RadioGroup>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:text="@string/login"
        app:cornerRadius="30dp"
        style="@style/YellowMaterialButton"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:text="@string/register_now"
        style="@style/WhiteMaterialButton"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_height="wrap_content"/>


</androidx.appcompat.widget.LinearLayoutCompat>