<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_24"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_id"
        style="@style/MaterialThemeOulinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:textCursorDrawable="@color/black"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_password"
        android:layout_width="match_parent"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/MaterialThemeOulinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            android:textCursorDrawable="@color/black"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_12"
        android:textColor="@color/forget_password_color"
        android:text="@string/forgot_password"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_user"
        android:layout_width="match_parent"
        android:text="@string/login"
        app:cornerRadius="30dp"
        style="@style/YellowMaterialButton"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:text="@string/register_now"
        style="@style/WhiteMaterialButton"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_height="wrap_content"/>


</androidx.appcompat.widget.LinearLayoutCompat>